--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
-  "scripts": {
-    "dev": "nodemon api/index.js",
-    "start": "node api/index.js",
-    "build": "npm install && npm install --prefix client && npm run build --prefix client"
+"scripts": {
+    "dev": "nodemon index.js", 
+    "start": "node index.js",
+    "build": "cd client && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
