Fix formatting in vercel.json for static files

--- a/vercel.json
+++ b/vercel.json
@@ -5,12 +5,12 @@
       "use": "@vercel/node",
       "config": {
         "includeFiles": [
-          "client/dist/**" // Ensure static files are included in the function bundle
+          "client/dist/**" 
         ]
       }
     },
     {
-      "src": "client/dist/**", // New build for static files
+      "src": "client/dist/**",
       "use": "@vercel/static"
     }
   ],
